--- a/src/sample/login.fxml
+++ b/src/sample/login.fxml
@@ -10,7 +10,6 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
       <Pane prefHeight="400.0" prefWidth="335.0" style="-fx-background-color: #212121;">
@@ -38,7 +37,7 @@
             <Font size="14.0" />
          </font>
       </JFXPasswordField>
-      <JFXButton fx:id="btnLogin" layoutX="385.0" layoutY="170.0" prefHeight="25.0" prefWidth="185.0" ripplerFill="#0629f2" style="-fx-background-color: #4fc3f1;" text="Login" textFill="WHITE">
+      <JFXButton fx:id="btnLogin" layoutX="385.0" layoutY="170.0" onAction="#Login" prefHeight="25.0" prefWidth="185.0" ripplerFill="#0629f2" style="-fx-background-color: #4fc3f1;" text="Login" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
