--- a/src/Admin/adminDashboard.fxml
+++ b/src/Admin/adminDashboard.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -30,6 +31,11 @@
                               <Font name="System Bold" size="13.0" />
                            </font>
                         </JFXButton>
+                        <TextField fx:id="searchTxt" layoutX="205.0" layoutY="9.0" prefHeight="25.0" prefWidth="246.0" promptText="Search">
+                           <font>
+                              <Font size="13.0" />
+                           </font>
+                        </TextField>
                      </children>
                   </AnchorPane>
             </content>
